[gd_scene load_steps=20 format=4 uid="uid://bpn1x8cdvpmgd"]

[ext_resource type="Script" path="res://scripts/levels/tutorial_0.gd" id="1_m43d6"]
[ext_resource type="TileSet" uid="uid://p75osdbfaruv" path="res://resources/test_tile_set.tres" id="1_sjhpa"]
[ext_resource type="PackedScene" uid="uid://bnt67b4wf47qu" path="res://scenes/objects/player.tscn" id="2_0echh"]
[ext_resource type="Texture2D" uid="uid://53ne81gplau0" path="res://sprites/dragon_flag.png" id="3_aw1e5"]
[ext_resource type="Texture2D" uid="uid://161ing63rdfs" path="res://sprites/keycap_right_arrow.png" id="5_10umm"]
[ext_resource type="Texture2D" uid="uid://6h3oh0xecxoo" path="res://sprites/keycap_up_arrow.png" id="5_pmvrd"]
[ext_resource type="Script" path="res://scripts/animated_keycap.gd" id="6_vscq7"]
[ext_resource type="Texture2D" uid="uid://d3efk20a8x1qs" path="res://sprites/keycap_left_arrow.png" id="6_xr2ns"]
[ext_resource type="Script" path="res://scripts/collectible.gd" id="9_ofmtq"]
[ext_resource type="Texture2D" uid="uid://loarm7an4wt3" path="res://resources/sprites/Collectible.png" id="10_fnph6"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/phantom_camera_host/phantom_camera_host.gd" id="11_rqppm"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/phantom_camera/phantom_camera_2d.gd" id="12_k4lce"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/resources/tween_resource.gd" id="13_vlywi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uns3m"]
size = Vector2(15, 22)

[sub_resource type="Animation" id="Animation_wqt0i"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HintLabel:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [""]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HintLabel:visible_ratio")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:finish_enabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_lccx0"]
resource_name = "Tutorial0"
length = 20.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HintLabel:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 10.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": ["", "Use the right and left arrow keys to move", "Collecting dragon scales will unleash your true powers"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HintLabel:visible_ratio")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.86667, 3.53333, 10.1333, 10.2667, 12.0333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 1.0, 0.0, 1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:finish_enabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 19.9667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s3jv2"]
_data = {
"RESET": SubResource("Animation_wqt0i"),
"Tutorial0": SubResource("Animation_lccx0")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3mgu4"]
size = Vector2(16, 16)

[sub_resource type="Resource" id="Resource_552mf"]
script = ExtResource("13_vlywi")
duration = 1.0
transition = 0
ease = 2

[node name="Tutorial0" type="Node2D"]
script = ExtResource("1_m43d6")

[node name="DragonFlag" type="Area2D" parent="."]
position = Vector2(608, 213)
collision_layer = 4
collision_mask = 2

[node name="Sprite2D" type="Sprite2D" parent="DragonFlag"]
texture = ExtResource("3_aw1e5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DragonFlag"]
position = Vector2(5.5, 0)
shape = SubResource("RectangleShape2D_uns3m")

[node name="RightKeyCap" type="Sprite2D" parent="."]
position = Vector2(136, 40)
texture = ExtResource("5_10umm")
script = ExtResource("6_vscq7")
watched_action_name = &"move_right"

[node name="UpKeyCap" type="Sprite2D" parent="."]
visible = false
position = Vector2(104, 40)
texture = ExtResource("5_pmvrd")
script = ExtResource("6_vscq7")
watched_action_name = &"jump"

[node name="LeftKeyCap" type="Sprite2D" parent="."]
position = Vector2(72, 40)
texture = ExtResource("6_xr2ns")
script = ExtResource("6_vscq7")
watched_action_name = &"move_left"

[node name="Player" parent="." instance=ExtResource("2_0echh")]
position = Vector2(326, 165)

[node name="BGLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAABABQAAAACAAIAAAACABQAAAACAAIAAAADABQAAAACAAIAAAAEABQAAAACAAIAAAAFABQAAAACAAIAAAAGABQAAAACAAIAAAAHABQAAAACAAIAAAAIABQAAAACAAIAAAAJABQAAAACAAIAAAAKABQAAAACAAIAAAALABQAAAACAAIAAAAMABQAAAACAAIAAAANABQAAAACAAIAAAAOABQAAAACAAIAAAAPABQAAAAFAAEAAAAQABQAAAAGAAEAAAARABQAAAACAAIAAAASABQAAAACAAIAAAATABQAAAACAAIAAAAUABQAAAACAAIAAAAVABQAAAACAAIAAAAWABQAAAACAAIAAAAXABQAAAACAAIAAAAYABQAAAACAAIAAAAZABQAAAACAAIAAAAaABQAAAACAAIAAAAbABQAAAACAAIAAAAcABQAAAACAAIAAAAdABQAAAACAAIAAAAeABQAAAAGAAIAAAAfABQAAAACAAIAAAAgABQAAAACAAIAAAABABUAAAACAAIAAAACABUAAAACAAIAAAADABUAAAAGAAIAAAAEABUAAAACAAIAAAAFABUAAAACAAIAAAAGABUAAAACAAIAAAAHABUAAAACAAIAAAAIABUAAAACAAIAAAAJABUAAAACAAIAAAAKABUAAAACAAIAAAALABUAAAACAAIAAAAMABUAAAACAAIAAAANABUAAAACAAIAAAAOABUAAAACAAIAAAAPABUAAAAFAAIAAAAQABUAAAAGAAIAAAARABUAAAACAAIAAAASABUAAAACAAIAAAATABUAAAACAAIAAAAUABUAAAACAAIAAAAVABUAAAACAAIAAAAWABUAAAACAAIAAAAXABUAAAACAAIAAAAYABUAAAACAAIAAAAZABUAAAACAAIAAAAaABUAAAACAAIAAAAbABUAAAACAAIAAAAcABUAAAACAAIAAAAdABUAAAACAAIAAAAeABUAAAACAAIAAAAfABUAAAACAAIAAAAgABUAAAACAAIAAAAhABQAAAACAAIAAAAhABUAAAACAAIAAAACABYAAAACAAMAAAADABYAAAACAAMAAAAEABYAAAACAAMAAAAFABYAAAACAAMAAAAGABYAAAACAAMAAAAHABYAAAACAAMAAAAIABYAAAACAAMAAAAJABYAAAACAAMAAAAKABYAAAACAAMAAAALABYAAAACAAMAAAAMABYAAAACAAMAAAANABYAAAACAAMAAAAOABYAAAACAAMAAAAPABYAAAACAAMAAAAQABYAAAACAAMAAAARABYAAAACAAMAAAASABYAAAACAAMAAAATABYAAAACAAMAAAAUABYAAAACAAMAAAAVABYAAAACAAMAAAAWABYAAAACAAMAAAAXABYAAAACAAMAAAAYABYAAAACAAMAAAAZABYAAAACAAMAAAAaABYAAAACAAMAAAAbABYAAAACAAMAAAAcABYAAAACAAMAAAAdABYAAAACAAMAAAAeABYAAAACAAMAAAAfABYAAAACAAMAAAAgABYAAAACAAMAAAABABYAAAACAAMAAAAhABYAAAACAAMAAAAAABYAAAABAAMAAAAAABUAAAABAAIAAAAAABQAAAABAAIAAAAAABMAAAABAAIAAAABABMAAAACAAIAAAACABMAAAACAAIAAAADABMAAAACAAIAAAAEABMAAAACAAIAAAAFABMAAAACAAIAAAAGABMAAAACAAIAAAAHABMAAAACAAIAAAAIABMAAAAGAAIAAAAJABMAAAACAAIAAAAKABMAAAACAAIAAAALABMAAAACAAIAAAAMABMAAAACAAIAAAANABMAAAACAAIAAAAOABMAAAACAAIAAAAPABMAAAACAAIAAAAQABMAAAACAAIAAAARABMAAAACAAIAAAASABMAAAACAAIAAAATABMAAAACAAIAAAAUABMAAAACAAIAAAAVABMAAAAGAAIAAAAWABMAAAACAAIAAAAXABMAAAACAAIAAAAYABMAAAACAAIAAAAZABMAAAACAAIAAAAaABMAAAACAAIAAAAbABMAAAACAAIAAAAcABMAAAACAAIAAAAdABMAAAACAAIAAAAeABMAAAACAAIAAAAfABMAAAACAAIAAAAgABMAAAACAAIAAAAhABMAAAACAAIAAAAiABQAAAACAAIAAAAjABQAAAACAAIAAAAkABQAAAACAAIAAAAlABQAAAACAAIAAAAmABQAAAACAAIAAAAmABUAAAACAAIAAAAlABUAAAACAAIAAAAkABUAAAACAAIAAAAjABUAAAACAAIAAAAiABUAAAACAAIAAAAiABYAAAACAAMAAAAjABYAAAACAAMAAAAkABYAAAACAAMAAAAlABYAAAACAAMAAAAmABYAAAACAAMAAAAnABQAAAADAAIAAAAnABUAAAADAAIAAAAnABYAAAADAAMAAAAiABMAAAACAAIAAAAjABMAAAACAAIAAAAkABMAAAACAAIAAAAlABMAAAAGAAIAAAAmABMAAAACAAIAAAAnABMAAAADAAIAAAADABIAAAACAAIAAAAEABIAAAACAAIAAAAFABIAAAACAAIAAAAGABIAAAACAAIAAAAHABIAAAACAAIAAAAIABIAAAACAAIAAAAJABIAAAACAAIAAAAKABIAAAACAAIAAAALABIAAAACAAIAAAAMABIAAAACAAIAAAANABIAAAACAAIAAAAOABIAAAACAAIAAAABABIAAAACAAIAAAACABIAAAACAAIAAAAPABIAAAACAAIAAAAQABIAAAACAAIAAAARABIAAAACAAIAAAASABIAAAACAAIAAAATABIAAAACAAIAAAAUABIAAAACAAIAAAAVABIAAAACAAIAAAAWABIAAAACAAIAAAAXABIAAAACAAIAAAAYABIAAAACAAIAAAAZABIAAAACAAIAAAAaABIAAAACAAIAAAAbABIAAAACAAIAAAAcABIAAAACAAIAAAAdABIAAAACAAIAAAAeABIAAAACAAIAAAAfABIAAAACAAIAAAAgABIAAAACAAIAAAAhABIAAAACAAIAAAAiABIAAAACAAIAAAAjABIAAAACAAIAAAAkABIAAAACAAIAAAAlABIAAAACAAIAAAAmABIAAAACAAIAAAAAABIAAAABAAIAAAAnABIAAAADAAIAAAAAABEAAAABAAEAAAAnABEAAAADAAIAAAABABEAAAACAAEAAAACABEAAAACAAEAAAADABEAAAACAAEAAAAEABEAAAACAAEAAAAFABEAAAACAAEAAAAGABEAAAACAAEAAAAHABEAAAACAAEAAAAIABEAAAACAAEAAAAJABEAAAACAAEAAAAKABEAAAACAAEAAAALABEAAAACAAEAAAAMABEAAAACAAEAAAANABEAAAACAAEAAAAOABEAAAACAAEAAAAPABEAAAACAAEAAAAQABEAAAACAAEAAAARABEAAAACAAEAAAASABEAAAACAAEAAAATABEAAAACAAEAAAAUABEAAAACAAEAAAAVABEAAAACAAEAAAAWABEAAAACAAEAAAAXABEAAAACAAEAAAAYABEAAAACAAEAAAAZABEAAAACAAEAAAAaABEAAAACAAEAAAAbABEAAAACAAEAAAAcABEAAAACAAEAAAAdABEAAAACAAEAAAAeABEAAAACAAEAAAAfABEAAAACAAEAAAAgABEAAAACAAEAAAAhABEAAAACAAEAAAAiABEAAAACAAEAAAAjABEAAAAGAAIAAAAkABEAAAACAAIAAAAlABEAAAACAAIAAAAmABEAAAACAAIAAAAmABAAAAACAAIAAAD//xYAAAAFAAMAAAD//xUAAAAFAAMAAAD//xQAAAAFAAMAAAD//xMAAAAFAAMAAAD//xIAAAAFAAMAAAD//xEAAAAFAAMAAAD//xAAAAAFAAMAAAD//w8AAAAFAAMAAAD//w4AAAAFAAMAAAD//w0AAAAFAAMAAAD//wwAAAAFAAMAAAD//wsAAAAFAAMAAAD//woAAAAFAAMAAAD//wkAAAAFAAMAAAD//wgAAAAFAAMAAAD//wcAAAAFAAMAAAD//wYAAAAFAAMAAAD//wUAAAAFAAMAAAD//wQAAAAFAAMAAAD//wMAAAAFAAMAAAD//wIAAAAFAAMAAAD//wEAAAAFAAMAAAD//wAAAAAFAAMAAAD/////AAAFAAMAAAAAAP//AAAFAAMAAAABAP//AAAFAAMAAAACAP//AAAFAAMAAAADAP//AAAFAAMAAAAEAP//AAAFAAMAAAAFAP//AAAFAAMAAAAGAP//AAAFAAMAAAAHAP//AAAFAAMAAAAIAP//AAAFAAMAAAAJAP//AAAFAAMAAAAKAP//AAAFAAMAAAALAP//AAAFAAMAAAAMAP//AAAFAAMAAAANAP//AAAFAAMAAAAOAP//AAAFAAMAAAAPAP//AAAFAAMAAAAQAP//AAAFAAMAAAARAP//AAAFAAMAAAASAP//AAAFAAMAAAATAP//AAAFAAMAAAAUAP//AAAFAAMAAAAVAP//AAAFAAMAAAAWAP//AAAFAAMAAAAXAP//AAAFAAMAAAAYAP//AAAFAAMAAAAZAP//AAAFAAMAAAAaAP//AAAFAAMAAAAbAP//AAAFAAMAAAAcAP//AAAFAAMAAAAdAP//AAAFAAMAAAAeAP//AAAFAAMAAAAfAP//AAAFAAMAAAAgAP//AAAFAAMAAAAhAP//AAAFAAMAAAAiAP//AAAFAAMAAAAjAP//AAAFAAMAAAAkAP//AAAFAAMAAAAlAP//AAAFAAMAAAAmAP//AAAFAAMAAAAnAP//AAAFAAMAAAAoAP//AAAFAAMAAAAoAAAAAAAFAAMAAAAoAAEAAAAFAAMAAAAoAAIAAAAFAAMAAAAoAAMAAAAFAAMAAAAoAAQAAAAFAAMAAAAoAAUAAAAFAAMAAAAoAAYAAAAFAAMAAAAoAAcAAAAFAAMAAAAoAAgAAAAFAAMAAAAoAAkAAAAFAAMAAAAoAAoAAAAFAAMAAAAoAAsAAAAFAAMAAAAoAAwAAAAFAAMAAAAoAA0AAAAFAAMAAAAoAA4AAAAFAAMAAAAoAA8AAAAFAAMAAAAoABAAAAAFAAMAAAAjABAAAAABAAEAAAAkABAAAAAGAAIAAAAkAA8AAAABAAMAAAAkAA4AAAABAAEAAAAlAA4AAAACAAEAAAAmAA4AAAACAAEAAAAnAA4AAAACAAEAAAAlAA8AAAACAAIAAAAlABAAAAACAAIAAAAmAA8AAAACAAIAAAAnAA8AAAADAAIAAAAnABAAAAADAAIAAAA=")
tile_set = ExtResource("1_sjhpa")

[node name="FGLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAABAAAAADAAAAAAAOABAAAAADAAAAAAAgABAAAAADAAAAAAAUABAAAAABAAAAAAAFABAAAAABAAAAAAAIABAAAAACAAAAAAAkAA0AAAACAAAAAAA=")
tile_set = ExtResource("1_sjhpa")
collision_enabled = false

[node name="HintLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 65.0
offset_top = 57.0
offset_right = 516.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
visible_characters = 0
visible_ratio = 0.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_s3jv2")
}
autoplay = "Tutorial0"

[node name="Collectible" type="Area2D" parent="." node_paths=PackedStringArray("type")]
position = Vector2(112, 256)
collision_mask = 2
script = ExtResource("9_ofmtq")
type = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collectible"]
shape = SubResource("RectangleShape2D_3mgu4")

[node name="Sprite2D" type="Sprite2D" parent="Collectible"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("10_fnph6")

[node name="Camera2D" type="Camera2D" parent="."]
physics_interpolation_mode = 2
position = Vector2(320, 180)

[node name="PhantomCameraHost" type="Node" parent="Camera2D"]
script = ExtResource("11_rqppm")

[node name="PhantomCamera2D" type="Node2D" parent="."]
position = Vector2(320, 180)
script = ExtResource("12_k4lce")
follow_mode = 2
tween_resource = SubResource("Resource_552mf")
follow_damping = true
follow_damping_value = Vector2(0.5, 0.5)
draw_limits = true

[connection signal="body_entered" from="DragonFlag" to="." method="_on_dragon_flag_body_entered"]
